# daft-geo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pr-test-suite.yml  publish-package.yml
daft_geo/: __init__.py
src/: accessors.rs  distance.rs  lib.rs  point.rs  types.rs
tests/: test_daft_geo.py
