[workspace]

[package]
name = "daft-geo"
edition = "2024"
version = "0.1.0"

[lib]
name = "daft_geo"
crate-type = ["cdylib"]

[dependencies]
daft-ext = { version = "0.1.1", features = ["arrow-58"] }
arrow = { version = "58", features = ["ffi"] }
geoarrow-array = "0.8.0"
geoarrow-schema = "0.8.0"
geo-traits = "0.3"
