[build-system]
requires = ["setuptools>=64", "setuptools-rust", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "daft-geo"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["daft"]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist"]
bench = ["numpy"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.13" }

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
